Jpg képek kicserélése Webp képkre

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     </header>
 
     <div id="image_slider">
-        <img src="imgs\cae73ca4d0a568b6f5f311eda67afe55.jpg" alt="Legjobb kép" id="image_slider_image">
+        <img src="imgs\cae73ca4d0a568b6f5f311eda67afe55.webp" alt="Legjobb kép" id="image_slider_image">
         <div id="center_texts">
             <p id="artist">Tomas Edwardo</p>
             <p id="design_title">Instagram artists with great photography skills</p>
@@ -61,47 +61,47 @@
 
     <div id="basic_grid">
         <div>
-            <img src="imgs\60b6a82f445a986c821ff5f1e3d04e6c.jpg" alt="Látványterv 1">
+            <img src="imgs\60b6a82f445a986c821ff5f1e3d04e6c.webp" alt="Látványterv 1">
             <p class="date">29.Jun.2021</p>
             <p class="design_title">Richard Norton photorealistic rendering as real photos</p>
         </div>
         <div>
-            <img src="imgs\56b7fb1561630beb8050bfcafbc8bbdc.jpg" alt="Látványterv 2">
+            <img src="imgs\56b7fb1561630beb8050bfcafbc8bbdc.webp" alt="Látványterv 2">
             <p class="date">29.Jun.2021</p>
             <p class="design_title">Richard Norton photorealistic rendering as real photos</p>
         </div>
         <div>
-            <img src="imgs\04090b9a3b6c11bd172ac7900ed6aa58.jpg" alt="Látványterv 3">
+            <img src="imgs\04090b9a3b6c11bd172ac7900ed6aa58.webp" alt="Látványterv 3">
             <p class="date">29.Jun.2021</p>
             <p class="design_title">Richard Norton photorealistic rendering as real photos</p>
         </div>
         <div>
-            <img src="imgs\ecbfbc356290aa158ead3e19f45cb390.jpg" alt="Látványterv 4">
+            <img src="imgs\ecbfbc356290aa158ead3e19f45cb390.webp" alt="Látványterv 4">
             <p class="date">29.Jun.2021</p>
             <p class="design_title">Richard Norton photorealistic rendering as real photos</p>
         </div>
         <div>
-            <img src="imgs\0732065d9740c5dae877f91d5f8153c3.jpg" alt="Látványterv 5">
+            <img src="imgs\0732065d9740c5dae877f91d5f8153c3.webp" alt="Látványterv 5">
             <p class="date">29.Jun.2021</p>
             <p class="design_title">Richard Norton photorealistic rendering as real photos</p>
         </div>
         <div>
-            <img src="imgs\e8a3f3f2c1d7a7473264eaa82390c4ba.jpg" alt="Látványterv 6">
+            <img src="imgs\e8a3f3f2c1d7a7473264eaa82390c4ba.webp" alt="Látványterv 6">
             <p class="date">29.Jun.2021</p>
             <p class="design_title">Richard Norton photorealistic rendering as real photos</p>
         </div>
         <div>
-            <img src="imgs\3f1034f60d9771b5933a28f2690e11c0.jpg" alt="Látványterv 7">
+            <img src="imgs\3f1034f60d9771b5933a28f2690e11c0.webp" alt="Látványterv 7">
             <p class="date">29.Jun.2021</p>
             <p class="design_title">Richard Norton photorealistic rendering as real photos</p>
         </div>
         <div>
-            <img src="imgs\0309947decaf61870ebde55925ccedef.jpg" alt="Látványterv 8">
+            <img src="imgs\0309947decaf61870ebde55925ccedef.webp" alt="Látványterv 8">
             <p class="date">29.Jun.2021</p>
             <p class="design_title">Richard Norton photorealistic rendering as real photos</p>
         </div>
         <div>
-            <img src="imgs\4b3f67f077e18992df78d3549bc4c91c.jpg" alt="Látványterv 9">
+            <img src="imgs\4b3f67f077e18992df78d3549bc4c91c.webp" alt="Látványterv 9">
             <p class="date">29.Jun.2021</p>
             <p class="design_title">Richard Norton photorealistic rendering as real photos</p>
         </div>
@@ -113,35 +113,35 @@
 
     <div id="trending">
         <div>
-            <img src="./imgs/346352ff9e46472a3a044e10d3f79203.jpg" alt="Népszerű látványterv 1">
+            <img src="./imgs/346352ff9e46472a3a044e10d3f79203.webp" alt="Népszerű látványterv 1">
             <div class="trending_text_container">
                 <p class="date">29.Jun.2021</p>
                 <p class="design_title">Richard Norton photorealistic rendering as real photos</p>
             </div>
         </div>
         <div>
-            <img src="imgs\c7fec03bbb8cb8c0331d76cf82695541.jpg" alt="Népszerű látványterv 2">
+            <img src="imgs\c7fec03bbb8cb8c0331d76cf82695541.webp" alt="Népszerű látványterv 2">
             <div class="trending_text_container">
                 <p class="date">29.Jun.2021</p>
                 <p class="design_title">Richard Norton photorealistic rendering as real photos</p>
             </div>
         </div>
         <div>
-            <img src="imgs\80c9f32c416e796dcf6a1e3b3575b0d0.jpg" alt="Népszerű látványterv 3">
+            <img src="imgs\80c9f32c416e796dcf6a1e3b3575b0d0.webp" alt="Népszerű látványterv 3">
             <div class="trending_text_container">
                 <p class="date">29.Jun.2021</p>
                 <p class="design_title">Richard Norton photorealistic rendering as real photos</p>
             </div>
         </div>
         <div>
-            <img src="imgs\d76bbc0a2ab58eca947643aaef9bcbf3.jpg" alt="Népszerű látványterv 4">
+            <img src="imgs\d76bbc0a2ab58eca947643aaef9bcbf3.webp" alt="Népszerű látványterv 4">
             <div class="trending_text_container">
                 <p class="date">29.Jun.2021</p>
                 <p class="design_title">Richard Norton photorealistic rendering as real photos</p>
             </div>
         </div>
         <div>
-            <img src="imgs\c08cdd3e01284154059ed2698f3ca701.jpg" alt="Népszerű látványterv 5">
+            <img src="imgs\c08cdd3e01284154059ed2698f3ca701.webp" alt="Népszerű látványterv 5">
             <div class="trending_text_container">
                 <p class="date">29.Jun.2021</p>
                 <p class="design_title">Richard Norton photorealistic rendering as real photos</p>
